# ARMCrossCompile

./: CMakeLists.txt  Makefile  README.md  build-arm-app.sh  cross-compilation.cmake
src/: BBB_led_control.c  sample.cpp
